apps/apps/media/sonarr/auth-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authentik-outpost
  namespace: security
  annotations:
    external-dns/is-public: "true"
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: "nginx"
  rules:
  - host: sonarr.${SECRET_DOMAIN}
    http:
      paths:
      - backend:
          # Or, to use an external Outpost, create an ExternalName service and reference that here.
          # See https://kubernetes.io/docs/concepts/services-networking/service/#externalname
          service:
            name: ak-outpost-sonarr-outpost
          service:
            port: 
              number: 9000
        path: /akprox
        pathType: Prefix
  tls:
    - hosts:
      - "sonarr.${SECRET_DOMAIN}"
  - secretName: sonarr-tls
